--- a/docs/components/datepicker/index.html
+++ b/docs/components/datepicker/index.html
@@ -12,19 +12,19 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-4a6b92fb.js">
-		<link rel="modulepreload" href="/./_app/chunks/vendor-2c2bd768.js">
-		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-156cf363.js">
-		<link rel="modulepreload" href="/./_app/pages/components/datepicker.svelte-740193b6.js">
-		<link rel="stylesheet" href="/./_app/assets/start-a8cd1609.css">
-		<link rel="stylesheet" href="/./_app/assets/vendor-53ea8f2a.css">
-		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-e7b925bc.css">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/start-eb6b9925.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/chunks/vendor-2c2bd768.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/__layout.svelte-156cf363.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/components/datepicker.svelte-740193b6.js">
+		<link rel="stylesheet" href="/svelte-toolkit-docs/_app/assets/start-a8cd1609.css">
+		<link rel="stylesheet" href="/svelte-toolkit-docs/_app/assets/vendor-53ea8f2a.css">
+		<link rel="stylesheet" href="/svelte-toolkit-docs/_app/assets/pages/__layout.svelte-e7b925bc.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-4a6b92fb.js";
+			import { start } from "/svelte-toolkit-docs/_app/start-eb6b9925.js";
 			start({
 				target: document.body,
-				paths: {"base":"","assets":"/."},
+				paths: {"base":"/svelte-toolkit-docs","assets":"/svelte-toolkit-docs"},
 				session: {},
 				host: location.host,
 				route: true,
@@ -34,8 +34,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/__layout.svelte-156cf363.js"),
-						import("/./_app/pages/components/datepicker.svelte-740193b6.js")
+						import("/svelte-toolkit-docs/_app/pages/__layout.svelte-156cf363.js"),
+						import("/svelte-toolkit-docs/_app/pages/components/datepicker.svelte-740193b6.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -99,7 +99,7 @@
           <td class=" svelte-yv4v5n"></td>
           <td class=" svelte-yv4v5n">the selected value
           </td>
-          <td class=" svelte-yv4v5n">Fri Aug 13 2021 13:46:29 GMT+1000 (Australian Eastern Standard Time)</td></tr>
+          <td class=" svelte-yv4v5n">Fri Aug 13 2021 13:58:49 GMT+1000 (Australian Eastern Standard Time)</td></tr>
         <tr class=""><td class=" svelte-yv4v5n">placeholder</td>
           <td></td>
           <td class=" svelte-yv4v5n">Placeholder text to show when the input is empty.</td>
@@ -118,7 +118,7 @@
   <h2>Code</h2>
   <div class="block"><div class="panel svelte-8s1cfm"><pre>import { DatePicker } from &quot;svelte-toolkit&quot;;
 
-&lt;DatePicker value={Fri Aug 13 2021 13:46:29 GMT+1000 (Australian Eastern Standard Time)} placeholder=&quot;&quot; dateFormat=&quot;d MMM yyyy&quot; dateOrder=&quot;mdy&quot; /&gt;</pre></div></div></div></div></div></div></main>
+&lt;DatePicker value={Fri Aug 13 2021 13:58:49 GMT+1000 (Australian Eastern Standard Time)} placeholder=&quot;&quot; dateFormat=&quot;d MMM yyyy&quot; dateOrder=&quot;mdy&quot; /&gt;</pre></div></div></div></div></div></div></main>
 
   <footer class="page-footer svelte-120o530"><div>Svelte Toolkit
 </div></footer></div>
