Fix: use base path in links

--- a/docs/components/datepicker/index.html
+++ b/docs/components/datepicker/index.html
@@ -5,23 +5,24 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="theme-color" content="#333333">
 
-	<link rel="manifest" href="/manifest.json">
-	<link rel="icon" type="image/png" href="/favicon.png">
+	<link rel="manifest" href="/svelte-toolkit-docs/manifest.json">
+	<link rel="icon" type="image/png" href="/svelte-toolkit-docs/favicon.png">
 
 	<title>Date Picker | Svelte Toolkit</title>
 
 		
 
-		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/start-eb6b9925.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/start-c6e25c77.js">
 		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/chunks/vendor-2c2bd768.js">
-		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/__layout.svelte-156cf363.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/chunks/paths-45dac81d.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/__layout.svelte-b568c365.js">
 		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/components/datepicker.svelte-740193b6.js">
 		<link rel="stylesheet" href="/svelte-toolkit-docs/_app/assets/start-a8cd1609.css">
 		<link rel="stylesheet" href="/svelte-toolkit-docs/_app/assets/vendor-53ea8f2a.css">
 		<link rel="stylesheet" href="/svelte-toolkit-docs/_app/assets/pages/__layout.svelte-e7b925bc.css">
 
 		<script type="module">
-			import { start } from "/svelte-toolkit-docs/_app/start-eb6b9925.js";
+			import { start } from "/svelte-toolkit-docs/_app/start-c6e25c77.js";
 			start({
 				target: document.body,
 				paths: {"base":"/svelte-toolkit-docs","assets":"/svelte-toolkit-docs"},
@@ -34,7 +35,7 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/svelte-toolkit-docs/_app/pages/__layout.svelte-156cf363.js"),
+						import("/svelte-toolkit-docs/_app/pages/__layout.svelte-b568c365.js"),
 						import("/svelte-toolkit-docs/_app/pages/components/datepicker.svelte-740193b6.js")
 					],
 					page: {
@@ -99,7 +100,7 @@
           <td class=" svelte-yv4v5n"></td>
           <td class=" svelte-yv4v5n">the selected value
           </td>
-          <td class=" svelte-yv4v5n">Fri Aug 13 2021 13:58:49 GMT+1000 (Australian Eastern Standard Time)</td></tr>
+          <td class=" svelte-yv4v5n">Fri Aug 13 2021 14:15:45 GMT+1000 (Australian Eastern Standard Time)</td></tr>
         <tr class=""><td class=" svelte-yv4v5n">placeholder</td>
           <td></td>
           <td class=" svelte-yv4v5n">Placeholder text to show when the input is empty.</td>
@@ -118,7 +119,7 @@
   <h2>Code</h2>
   <div class="block"><div class="panel svelte-8s1cfm"><pre>import { DatePicker } from &quot;svelte-toolkit&quot;;
 
-&lt;DatePicker value={Fri Aug 13 2021 13:58:49 GMT+1000 (Australian Eastern Standard Time)} placeholder=&quot;&quot; dateFormat=&quot;d MMM yyyy&quot; dateOrder=&quot;mdy&quot; /&gt;</pre></div></div></div></div></div></div></main>
+&lt;DatePicker value={Fri Aug 13 2021 14:15:45 GMT+1000 (Australian Eastern Standard Time)} placeholder=&quot;&quot; dateFormat=&quot;d MMM yyyy&quot; dateOrder=&quot;mdy&quot; /&gt;</pre></div></div></div></div></div></div></main>
 
   <footer class="page-footer svelte-120o530"><div>Svelte Toolkit
 </div></footer></div>
