--- a/docs/components/dropdown/index.html
+++ b/docs/components/dropdown/index.html
@@ -5,23 +5,24 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="theme-color" content="#333333">
 
-	<link rel="manifest" href="/manifest.json">
-	<link rel="icon" type="image/png" href="/favicon.png">
+	<link rel="manifest" href="/svelte-toolkit-docs/manifest.json">
+	<link rel="icon" type="image/png" href="/svelte-toolkit-docs/favicon.png">
 
 	<title>Drop Down | Svelte Toolkit</title>
 
 		
 
-		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/start-eb6b9925.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/start-c6e25c77.js">
 		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/chunks/vendor-2c2bd768.js">
-		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/__layout.svelte-156cf363.js">
-		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/components/dropdown.svelte-9c26ac0e.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/chunks/paths-45dac81d.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/__layout.svelte-b568c365.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/components/dropdown.svelte-673c8993.js">
 		<link rel="stylesheet" href="/svelte-toolkit-docs/_app/assets/start-a8cd1609.css">
 		<link rel="stylesheet" href="/svelte-toolkit-docs/_app/assets/vendor-53ea8f2a.css">
 		<link rel="stylesheet" href="/svelte-toolkit-docs/_app/assets/pages/__layout.svelte-e7b925bc.css">
 
 		<script type="module">
-			import { start } from "/svelte-toolkit-docs/_app/start-eb6b9925.js";
+			import { start } from "/svelte-toolkit-docs/_app/start-c6e25c77.js";
 			start({
 				target: document.body,
 				paths: {"base":"/svelte-toolkit-docs","assets":"/svelte-toolkit-docs"},
@@ -34,8 +35,8 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/svelte-toolkit-docs/_app/pages/__layout.svelte-156cf363.js"),
-						import("/svelte-toolkit-docs/_app/pages/components/dropdown.svelte-9c26ac0e.js")
+						import("/svelte-toolkit-docs/_app/pages/__layout.svelte-b568c365.js"),
+						import("/svelte-toolkit-docs/_app/pages/components/dropdown.svelte-673c8993.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -81,8 +82,8 @@
 
 <div class="container"><h1>Drop Down</h1>
   <div class="notification warning svelte-1bnaloj"><div class="notification-content svelte-1bnaloj">Note: DropDown is obsolete -- use
-    <a href="dropdownbutton">DropDownButton</a> or
-    <a href="dropdownlink">DropDownLink</a> instead.
+    <a href="./dropdownbutton">DropDownButton</a> or
+    <a href="./dropdownlink">DropDownLink</a> instead.
   </div>
     </div></div></div></div></div></main>
 
