--- a/docs/components/focusgroup/index.html
+++ b/docs/components/focusgroup/index.html
@@ -5,16 +5,17 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<meta name="theme-color" content="#333333">
 
-	<link rel="manifest" href="/manifest.json">
-	<link rel="icon" type="image/png" href="/favicon.png">
+	<link rel="manifest" href="/svelte-toolkit-docs/manifest.json">
+	<link rel="icon" type="image/png" href="/svelte-toolkit-docs/favicon.png">
 
 	<title>Focus Group | Svelte Toolkit</title>
 
 		
 
-		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/start-eb6b9925.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/start-c6e25c77.js">
 		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/chunks/vendor-2c2bd768.js">
-		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/__layout.svelte-156cf363.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/chunks/paths-45dac81d.js">
+		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/__layout.svelte-b568c365.js">
 		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/pages/components/focusgroup.svelte-895f2742.js">
 		<link rel="modulepreload" href="/svelte-toolkit-docs/_app/chunks/items-34670d13.js">
 		<link rel="stylesheet" href="/svelte-toolkit-docs/_app/assets/start-a8cd1609.css">
@@ -23,7 +24,7 @@
 		<link rel="stylesheet" href="/svelte-toolkit-docs/_app/assets/pages/components/focusgroup.svelte-7cab72a6.css">
 
 		<script type="module">
-			import { start } from "/svelte-toolkit-docs/_app/start-eb6b9925.js";
+			import { start } from "/svelte-toolkit-docs/_app/start-c6e25c77.js";
 			start({
 				target: document.body,
 				paths: {"base":"/svelte-toolkit-docs","assets":"/svelte-toolkit-docs"},
@@ -36,7 +37,7 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/svelte-toolkit-docs/_app/pages/__layout.svelte-156cf363.js"),
+						import("/svelte-toolkit-docs/_app/pages/__layout.svelte-b568c365.js"),
 						import("/svelte-toolkit-docs/_app/pages/components/focusgroup.svelte-895f2742.js")
 					],
 					page: {
